# ChangeLog for gnome-extra/evolution-data-server
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*evolution-data-server-2.30.3-r1 (10 Sep 2010)

  10 Sep 2010; Hans de Graaff <graaff@gentoo.org>
  files/evolution-data-server-1.8.0-camel-rewind.patch,
  files/evolution-data-server-2.28.0-gentoo_etc_services.patch,
  files/evolution-data-server-2.28.3.1-version-number.patch,
  files/evolution-data-server-2.30.1-sha2.patch,
  files/evolution-data-server-2.30.2-revert-addressbook.patch,
  +evolution-data-server-2.30.3-r1.ebuild, files/calentry.schema,
  files/e-d-s-camel-skip-failing-test.patch, files/eds.patch, metadata.xml:
  Track 2.30.3 release.

*evolution-data-server-2.30.2-r1 (26 Jun 2010)
*evolution-data-server-2.30.1-r2 (26 Jun 2010)

  26 Jun 2010; Hans de Graaff <graaff@gentoo.org>
  +evolution-data-server-2.30.1-r2.ebuild,
  +files/evolution-data-server-2.30.1-sha2.patch,
  +evolution-data-server-2.30.2-r1.ebuild,
  +files/evolution-data-server-2.30.2-revert-addressbook.patch,
  +files/e-d-s-camel-skip-failing-test.patch:
  Add 2.30.2 with SHA2 patches.

*evolution-data-server-2.28.3.1-r2 (06 Jun 2010)

  06 Jun 2010; Hans de Graaff <graaff@gentoo.org>
  +files/evolution-data-server-1.8.0-camel-rewind.patch,
  +files/evolution-data-server-2.28.0-gentoo_etc_services.patch,
  +evolution-data-server-2.28.3.1-r2.ebuild,
  +files/evolution-data-server-2.28.3.1-version-number.patch,
  +files/calentry.schema, +files/eds.patch:
  Own version of evolution-data-server supporting SHA-2 signatures.
