@@ -9,21 +9,14 @@ AUX evolution-data-server-2.28.0-gentoo_etc_services.patch 1294 RMD160 058a86636
 AUX evolution-data-server-2.28.3.1-version-number.patch 1192 RMD160 17c142918982cb8272d8f36e794dd170cb212626 SHA1 45da8bdca73cd1805d74119fe26427a780f89033 SHA256 b5c5476a2b37eb6871d1c786bacde8212fd0aebf4e23ec56587b6b92de1bba32
 AUX evolution-data-server-2.30.1-sha2.patch 14517 RMD160 8a0044d0e863a4bac91985233064f81741938016 SHA1 7c0884d34958c778e831c93b6455338791d9fb92 SHA256 ab8c1bfb2cb0d059bcd85f5c4a500c6d57f17610fb503e5f85dd19d667639aff
 AUX evolution-data-server-2.30.2-revert-addressbook.patch 1670 RMD160 ca8d68745caf933bbd78c6a371fedc1725881fe3 SHA1 6fe8191f0107de97dc4aa39086281e0d4af2ce5b SHA256 cb35ab5a715db8d56d1e05d723bedbcb73f1d14da74cba0579b65b9d9e2a2675
-DIST evolution-data-server-2.28.3.1.tar.bz2 14461320 RMD160 11f5c0311de98e590bba73a9a46d33c4d42d8538 SHA1 64dec0b300f3ba15da3969eb8e84b0e81b2842de SHA256 3f0457b755873533773f8f1c17cef8f6a25b77b7baf0e98100389e1210970d17
-DIST evolution-data-server-2.30.1-patches.tar.bz2 25178 RMD160 d7cd59e67bdc42da9d9d1fdabf1be1f52c41170f SHA1 7c99d13087835fb56d5dd01884a70f24539b1c28 SHA256 4617ebc23ce0250424428ff54c1e38ef27f847104a832019c704a2f4f7b5fcd3
-DIST evolution-data-server-2.30.1.tar.bz2 4636784 RMD160 fe3a2a2a7333a631fcfe81c1afee80b1acf77235 SHA1 18d2517234edc85309b7e86ec1e9b946d37227b6 SHA256 b2ebeac36931fbee6fb747ee535a61243dd99fa15bc472ca239f2b01cc88795e
-DIST evolution-data-server-2.30.2.tar.bz2 4643434 RMD160 a4748e462b7b293bf35ddf9b79d7d50a6ca8ee6e SHA1 aabab98c3efec2a5d3c0b3443aa6cf43bbd06bfa SHA256 a691319a8f269fc80608611fe30ceb7a552550067f31615efc268a9b7d3c1bf2
 DIST evolution-data-server-2.30.3.tar.bz2 4652416 RMD160 2d4dc2fd6b8dfdc013042400b382f4684e642425 SHA1 449d3e7a9b19768d5a792434ca5d55c9d2496993 SHA256 3773e677ab3b9ff5564a26409ec6b00bc1bd68baf58a8781109866a7e29df890
-EBUILD evolution-data-server-2.28.3.1-r2.ebuild 3491 RMD160 ec61a828ed25de941da28647e94f52ce24b1a7e9 SHA1 abc92923724c746a87d584d367ec79a6ffc62bdf SHA256 167da35bf8f0d734297e6398baf50fcf967bc8fc8c4b6ee3e095ec473670e51d
-EBUILD evolution-data-server-2.30.1-r2.ebuild 3556 RMD160 c51a465a25f912a13d311e5bbc4d13c27068fb3d SHA1 ec05d94798dcda9e5e01e37ebb2f92dc1f792f71 SHA256 b3972c2b91b30a49af8a186fe8856e274bd88aabed9c4422f3d5778e76de17bf
-EBUILD evolution-data-server-2.30.2-r1.ebuild 3533 RMD160 034f0774848cb4f01d5fa92f080f6f1980d0f90e SHA1 1de298e39cbe7627215c593908fcee28e2864317 SHA256 35be4b267a21a3af6a3f992c0c499776d9872b50fcfd35b41ab42cea68daf11e
 EBUILD evolution-data-server-2.30.3-r1.ebuild 3114 RMD160 77ad5dbfeea9a97be9bd0b415bb4392080ff8284 SHA1 a25a95a123c40220f0ef4dd9114dda73b5e7d597 SHA256 7813ceb847621ba0d36c094634ea0733efd9455085521c35fe5642a40033fbaf
-MISC ChangeLog 1558 RMD160 0dab05949aa918c229e16efbac56dabf91455bbf SHA1 f2c74ea4accb5266dc974a2b70040c893174fdc4 SHA256 aec18290380b47b833dab0746e7505fd93099b36ff7479cea1cfd18b0000d8c2
+MISC ChangeLog 1763 RMD160 09777ee2244311cc796c269a26ace4a3f05bbb68 SHA1 a9d12bc644cc8ddc24ba407b3a5e236391c81a27 SHA256 3c4d33e0a6ced6c7643f162f24af879a6f4d037c266650465677f93cc1a505f2
 MISC metadata.xml 222 RMD160 c395116c51764efaa671a0f89a7d8992ecbe7304 SHA1 2095e0ced2657346964271e45cc69027b0ccd49d SHA256 0adb6b2a2a8cc78f3d28b8b629db9d9e5731f21da86168ae88eeadc8b82d3225
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAkyKFpoACgkQZihJkut28SvbZwD/dwNu/wAHeW2NEF53//5A54NJ
-yGMCuEj0iNxBCbVzuGoA/iC7Avuoh+HFqJR9a7uDlLvh//qi16LLzP0GPwEbZNQb
-=yKTG
+iF4EAREIAAYFAky79o0ACgkQZihJkut28SswBwEAp5j6Rkz1ukyrJWT8h0a0xW8E
+0Ughh4OSRcx3+kt+J4sA/igr7OQxmAchbGkhpDiABcG0l6lYFqUB1zhpVlcGcmWM
+=G3kK
 -----END PGP SIGNATURE-----
